# learning_smolagents

./: .env.example  .gitignore  README.md  ai_agent_presentation.pptx  all_model_providers.py  basic_agent.py  browser_automation.py  download_photos_agent.py  house_cost_estimator.py  linkedin_job_search_agent.py  lm_studio_agent.py  main.py  multi_agent.py  news_video.md  observability.py  pyproject.toml  requirements.txt  script_to_presentation_agent.py  test.py  test_script.txt  text_to_sql.py  trip_planner.py  yt_script.md  yt_script_writer.py
