[project]
name = "test-smolagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "google-genai>=1.8.0",
    "langfuse>=2.60.2",
    "openinference-instrumentation-smolagents>=0.1.9",
    "opentelemetry-exporter-otlp>=1.31.1",
    "opentelemetry-sdk>=1.31.1",
    "smolagents[gradio,mcp,telemetry]>=1.12.0",
    "undetected-chromedriver>=3.5.5",
]
